tests/invalid/trait/impl_unresolved.facet
trait Show;

struct Box<T> where T: Show {
  value: affine T
}

fn main() -> affine Box<affine isize> {
  Box<affine isize> { value = 1 }
}
